--- a/paper/tex/aktuelleEntwicklung/multilayerPerceptron/multilayerPerceptron.tex
+++ b/paper/tex/aktuelleEntwicklung/multilayerPerceptron/multilayerPerceptron.tex
@@ -1,6 +1,6 @@
 \section{Multilayer Perceptron}
 
-Eines der bekanntesten Architekturen der neuronalen Netze ist das sogenannte \emph{Multilayer Perceptron}. Diese sehr vielfältig eingesetzte Struktur verwendet den erläuterten Backpropagation-Lernalgorithmus und erzielt damit in der Regel sehr gute Ergebnisse. Beim MLP spielt die Aktivierungsfunktion durchaus auch eine tragende Rolle und ist nicht fest definiert (häufig wird jedoch die Sigmoid-Funktion verwendet). Wenn das Netzwerk sehr viele verborgene Zwischenschichten besitzt wird es allgemein als \emph{tief} bezeichnet und es kann zu Problemen beim Training kommen. Hierbei gibt es spezielle Techniken die diese Probleme lösen können und generell unter dem Namen \emph{depplearning} zusammengefasst werden. Da diese Architektur als so vielfältig gilt kann sie in vielen verschiedenen Anwendungsbereichen eingesetzt werden, hier ein paar Beispiele:
+Eines der bekanntesten Architekturen der neuronalen Netze ist das sogenannte \emph{Multilayer Perceptron}. Diese sehr vielfältig eingesetzte Struktur verwendet den erläuterten Backpropagation-Lernalgorithmus und erzielt damit in der Regel sehr gute Ergebnisse. Beim MLP spielt die Aktivierungsfunktion durchaus auch eine tragende Rolle und ist nicht fest definiert (häufig wird jedoch die Sigmoid-Funktion verwendet). Wenn das Netzwerk sehr viele verborgene Zwischenschichten besitzt, wird es allgemein als \emph{tief} bezeichnet und es kann zu Problemen beim Training kommen. Hierbei gibt es spezielle Techniken die diese Probleme lösen können und generell unter dem Namen \emph{deep learning} zusammengefasst werden. Da diese Architektur als so vielfältig gilt, kann sie in vielen verschiedenen Anwendungsbereichen eingesetzt werden. Hier ein paar Beispiele:
 
 \begin{multicols}{2}
 \begin{itemize}
@@ -16,9 +16,9 @@ Eines der bekanntesten Architekturen der neuronalen Netze ist das sogenannte \em
 
 \paragraph{Zusammenfassung - Aufbau}
 
-Da diese Architektur als Grundlage für die Erklärung des Backpropagation-Algorithmus gewählt wurde folgt nur eine kurze Zusammenfassung des Aufbaus. Für eine ausführliche Erklärung sämtlicher Notations-Regeln etc. siehe Abschnitt \ref{ss:notationBP}.
+Da diese Architektur als Grundlage für die Erklärung des Backpropagation-Algorithmus gewählt wurde, folgt nur eine kurze Zusammenfassung des Aufbaus. Für eine ausführliche Erklärung sämtlicher Notations-Regeln etc. siehe Abschnitt \ref{ss:notationBP}.
 
-Diese Struktur gilt als mehrschichtige vorwärtsgekoppeltes Netzwerk. Teilweise wird sie auch als Mehrschichten-Perzeptron bezeichnet weil sie einem Perzeptron-Netzwerk mit mehreren Schichten sehr ähnelt. Dieses Netzwerk besteht aus einer Eingabeschicht, einer oder mehrerer innerer Schichten\footnote{in englisch auch häufig \emph{hidden Layers} genannt}, und einer Ausgabeschicht. 
+Diese Struktur gilt als mehrschichtige vorwärtsgekoppeltes Netzwerk. Teilweise wird sie auch als Mehrschichten-Perzeptron bezeichnet, weil sie einem Perzeptron-Netzwerk mit mehreren Schichten sehr ähnelt. Dieses Netzwerk besteht aus einer Eingabeschicht, einer oder mehrerer innerer Schichten\footnote{in englisch auch häufig \emph{hidden Layers} genannt} und einer Ausgabeschicht. 
 
 \begin{figure}[!htb]
 	\centering
@@ -27,14 +27,14 @@ Diese Struktur gilt als mehrschichtige vorwärtsgekoppeltes Netzwerk. Teilweise 
 	\label{fig:mlpAufbau}
 \end{figure}
 
-Das Netz kann \emph{n} Eingabewerte annehmen, welche jeweils mit den Neuronen $x_1$ bis $x_n$ entgegengenommen werden. Die einzelnen Neuronen werden mit einer Aktivierungsfunktion belegt und verwenden intern einen eigenen Schwellwert. Das durch-iterieren diverser Eingabewerte wird auch als \emph{Feedforward} bezeichnet, wobei am Ende \emph{m} Ausgabewerte entstehen die über die Ausgabeneutronen der letzten Schicht weitergeleitet werden (siehe $z_1$ bis $z_n$).
+Das Netz kann \emph{n} Eingabewerte annehmen, welche jeweils mit den Neuronen $x_1$ bis $x_n$ entgegengenommen werden. Die einzelnen Neuronen werden mit einer Aktivierungsfunktion belegt und verwenden intern einen eigenen Schwellwert. Das durch-Iterieren diverser Eingabewerte wird auch als \emph{Feedforward} bezeichnet, wobei am Ende \emph{m} Ausgabewerte entstehen, die über die Ausgabeneutronen der letzten Schicht weitergeleitet werden (siehe $z_1$ bis $z_n$).
 
 \FloatBarrier
 
 \paragraph{Aktivierungsfunktionen}
 
 \subparagraph{Sigmoid}
-Um beim Backpropagation-Algorithmus die ersten Ableitungen der Aktivierungsfunktion berechnen zu können müssen diese stetig differenzierbar sein. Eine häufig verwendete Funktion ist die \emph{Sigmoid}-Funktion. Diese logistische Funktion zeichnet sich durch aus, dass alle möglichen Eingabewerte einen Ausgabewert zwischen 0 und 1 generieren. Sehr kleine Werte streben dabei gegen 0 während sehr große Werte gegen 1 streben. Die Formel sieht folgendermaßen aus:
+Um beim Backpropagation-Algorithmus die ersten Ableitungen der Aktivierungsfunktion berechnen zu können, müssen diese stetig differenzierbar sein. Eine häufig verwendete Funktion ist die \emph{Sigmoid}-Funktion. Diese logistische Funktion zeichnet sich dadurch aus, dass alle möglichen Eingabewerte einen Ausgabewert zwischen 0 und 1 generieren. Sehr kleine Werte streben dabei gegen 0, während sehr große Werte gegen 1 streben. Die Formel sieht folgendermaßen aus:
 
 \begin{equation}
 f(x) = \frac{1}{1 + exp(-b * x)}
