added sub item notes

--- a/slides/tex/geschichtliches/mcCullochPittsNeuron/mpNeuron.tex
+++ b/slides/tex/geschichtliches/mcCullochPittsNeuron/mpNeuron.tex
@@ -7,6 +7,12 @@
 \includegraphics[width=\linewidth]{./geschichtliches/mcCullochPittsNeuron/img/bioNeuron_alpha}
 \end{figure}
 
+\note[item]{\emph{Dendriten}: Nehmen Infos auf} 
+\note[item]{This is small
+\begin{itemize}
+  \item This is large
+\end{itemize}}
+
 \end{frame}
 
 
