--- a/slides/tex/geschichtliches/perceptron/perceptron.tex
+++ b/slides/tex/geschichtliches/perceptron/perceptron.tex
@@ -49,6 +49,26 @@ z & =  w_1x_{1} + \dots + w_mx_{m} \\
 \end{split}
 \end{align*}
 \end{columns}
+
+\note[item]{1958: US-amerikanische Psychologe / Informatiker Frank Rosenblatt}
+\note[item]{älteste heutzutage noch genutzte NN}
+\note[item]{inspiriert vom Auge einer Fliege
+\begin{itemize}
+    \item Flugrichtung - Entscheidungen teils direkt im Auge getroffen
+\end{itemize}}
+
+\note[item]{Weiterentwicklung der MP-Zelle}
+\note[item]{Eingabewerte mit Gewichten priorisiert
+\begin{itemize}
+    \item Auf Formel verweisen
+\end{itemize}}
+
+\note[item]{Gleich bleibt jedoch die binäre Klassifikation
+\begin{itemize}
+    \item Verweis auf Unit step function
+    \item hier jedoch nicht Wahrheitswerte sondern -1 und 1
+\end{itemize}}
+
 \end{frame}
 
 
@@ -58,7 +78,6 @@ z & =  w_1x_{1} + \dots + w_mx_{m} \\
 \begin{figure}
 \includegraphics[width=.6\linewidth]{./geschichtliches/perceptron/img/perceptron_schematisch_alpha}
 \end{figure}
-
 
 \hrule
 
@@ -85,6 +104,14 @@ z & = \mathbf{w_0x_{0}} + w_1x_{1} + \dots + w_mx_{m} \\
 
 \end{columns}
 
+
+\note[item]{Grafik erläutern}
+\note[item]{Konvention: 
+\begin{itemize}
+    \item erleichtert später Notation der Lernregel
+    \item Schwellwert auf andere Seite der z-Wert Gleichung ziehen
+\end{itemize}}
+
 \end{frame}
 
 
@@ -107,6 +134,23 @@ z & = \mathbf{w_0x_{0}} + w_1x_{1} + \dots + w_mx_{m} \\
 \end{itemize}
 \end{itemize}
 \end{block}
+
+\note[item]{Rosenblatt erfindet \emph{lernenden} Algorithmus}
+\note[item]{Auf Menge von Trainingsdatensätzen zurückgegriffen
+\begin{itemize}
+    \item Datensätze bestehen aus Ein- und erwarteten Ausgabewerten
+    \item in Literatur auch \emph{gelabelte} Werte genannt
+\end{itemize}}
+
+\note[item]{Lernalgorithmus - grobe Zusammenfassung
+\begin{itemize}
+    \item Gewichte mit kleinem Wert / 0 vorinitialisieren
+    \item Datensätze durchiterieren
+    \begin{itemize}
+        \item Ausgabewert berechnen
+        \item Gewichte angleichen
+    \end{itemize}
+\end{itemize}}
 
 \end{frame}
 
@@ -131,17 +175,45 @@ z & = \mathbf{w_0x_{0}} + w_1x_{1} + \dots + w_mx_{m} \\
 \end{aligned}
 \end{align*}
 \end{itemize}
+
+\note[item]{Erste Formel auf Slide beschreiben
+\begin{itemize}
+    \item Gewichte können zu Gewichtsvektor zusammengezogen werden 
+    \begin{itemize}
+        \item hier komponentenweise betrachtet
+    \end{itemize}
+    \item Delta (Dreieck) wird stets als Änderung verstanden
+\end{itemize}}
+
+\note[item]{Exponent \emph{i} hierbei jeweils als Index des Trainingsvektors in Menge}
+\note[item]{Lernalgorithmus arbeitet inkrementell
+\begin{itemize}
+    \item Lernrate (eta) bestimmt wie stark die Gewichte pro Durchlauf angeglichen werden
+    \item Differenz mit Lernrate und Eingabewert multipliziert
+\end{itemize}}
+
+\note[item]{Iteration mit 2d - Eingabevektor
+\begin{itemize}
+    \item w0 hierbei der Schwellwert selbst
+    \item Faktor x weggelassen da bereits gleich 1
+    \item Nutzung der beschriebenen Notation
+\end{itemize}}
+
 \end{frame}
 
 
 \begin{frame}
 \frametitle{Lernregel - Trainingsbeispiele}
 
+\begin{block}{Gewichtsänderung}
+$\Delta w_j = \eta \; (\text{target}^{(i)} - \text{output}^{(i)})\;x^{(i)}_{j}$
+\end{block}
+
 \begin{itemize}
 \item Trainingsdatensatz richtig erkannt: 
 \begin{align*}
 \begin{aligned}
-& \Delta w_j = \eta(1^{(i)} - 1^{(i)})\;x^{(i)}_{j} = 0 \\
+& \Delta w_j = \eta \big( (-1^{(i)}) - (-1^{(i)}) \big)\;x^{(i)}_{j} = 0 \\
 & \Delta w_j = \eta(1^{(i)} - 1^{(i)})\;x^{(i)}_{j} = 0 \\
 \end{aligned}
 \end{align*}
@@ -149,12 +221,36 @@ z & = \mathbf{w_0x_{0}} + w_1x_{1} + \dots + w_mx_{m} \\
 \item Trainingsdatensatz falsch erkannt:
 \begin{align*}
 \begin{aligned}
-& \Delta w_j = \eta(1^{(i)} - -1^{(i)})\;x^{(i)}_{j} = \eta(2)\;x^{(i)}_{j} \\
-& \Delta w_j = \eta(-1^{(i)} - 1^{(i)})\;x^{(i)}_{j} = \eta(-2)\;x^{(i)}_{j} \\
+& \Delta w_j = \eta \big( 1^{(i)} - (-1^{(i)}) \big) \;x^{(i)}_{j} = \eta(2)\;x^{(i)}_{j} \\
+& \Delta w_j = \eta \big( (-1^{(i)}) - 1^{(i)} \big) \;x^{(i)}_{j} = \eta(-2)\;x^{(i)}_{j} \\
 \end{aligned}
 \end{align*}
 
 \end{itemize}
+
+\note[item]{Erinnerung: erst target dann output}
+\note[item]{Richtig erkannt
+\begin{itemize}
+    \item Generell Ausgabe 0, keine Änderung
+    \item Beide Falsch: -1
+    \item Beide Richtig: +1
+\end{itemize}}
+
+\note[item]{Falsch erkannt
+\begin{itemize}
+    \item output zu klein
+    \begin{itemize}
+        \item erwartetet +1 bekommen -1 
+        \item Positiver (Differenz-)Faktor 
+    \end{itemize}
+
+    \item output zu groß
+    \begin{itemize}
+        \item erwartetet -1 bekommen +1 
+        \item Negativer (Differen-)Faktor
+    \end{itemize}
+\end{itemize}}
+
 \end{frame}
 
 
